# CUTEX

./: .gitignore  CMakeLists.txt  README.rst  conanfile.py
cmake/config/: Base.cmake  Dependencies.cmake  Options.cmake
cmake/modules/: Base.cmake  ConanPackages.cmake  Dependencies.cmake  ExternalDependency.cmake
include/: CMakeLists.txt
include/cutex/: descriptive_suite.h
test/: CMakeLists.txt  descriptive_suite_test.cpp
test_package/: CMakeLists.txt  conanfile.py  cutex.cpp  package_test.cpp
